# learning_ros_external_packages

./: README.md  cs_create_pkg.py
rviz_plugin_selected_points_topic/: CMakeLists.txt  package.xml
sticky_fingers/: CMakeLists.txt  package.xml  readme.md
sticky_fingers/launch/: blocks_on_table.launch
sticky_fingers/src/: finger_control_dummy_node.cpp  sticky_fingers.cpp  sticky_fingers_manual_offset.cpp  sticky_fingers_sensor.cpp
sticky_fingers/srv/: StickyControl.srv
sticky_fingers/world/: blocks_on_table.world
